--- a/Gabo.ipynb
+++ b/Gabo.ipynb
@@ -31,7 +31,24 @@
     "# Imprimir el resumen generado\n",
     "print(\"Resumen del contenido del PDF:\")\n",
     "print(response.choices[0].text)\n",
-    "\n"
+    "\n",
+    "while (numero_palabras > 1000):\n",
+    "    # Dividir el texto en segmentos de longitud adecuada (10,000 palabras)\n",
+    "    texto_a_resumir1 = texto_a_resumir[:9000]\n",
+    "    # Resumir el texto\n",
+    "    BigWordsShort(texto_a_resumir1)\n",
+    "    # Eliminar el texto resumido del texto original\n",
+    "    texto_a_resumir = texto_a_resumir[9000:]\n",
+    "    \n",
+    "    # Actualizar el numero de palabras\n",
+    "    numero_palabras = len(texto_a_resumir.split())\n",
+    "    print(f\"El texto contiene {numero_palabras} palabras.\")\n",
+    "    texto_a_resumir1 = \"\"\n",
+    "    i = 0 \n",
+    "    i = i + 1\n",
+    "    if (i == 50):\n",
+    "        numero_palabras = 100\n",
+    "        print(\"El texto es demasiado largo, no se puede resumir\")"
    ]
   }
  ],
